--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ brand_color: "gray"
 permalink: :title/
 
 # "UA-NNNNNNNN-N"
-google_analytics: ""
+google_analytics: "UA-111786099-1"
 
 # Language. For example, if you write in Japanese, use "ja"
 lang: "en"
